[gd_scene load_steps=9 format=3 uid="uid://cacbo0lnpvlhv"]

[ext_resource type="FontFile" uid="uid://bs8qhqjs8jqq" path="res://menu/upheavtt.ttf" id="1_i2kbd"]
[ext_resource type="Script" path="res://menu/Explicacao.gd" id="1_u0oas"]
[ext_resource type="Texture2D" uid="uid://dm885eu1ffi68" path="res://menu/Captura de tela 2024-08-08 100610.png" id="2_dcu83"]
[ext_resource type="Texture2D" uid="uid://b7nwe1yw1dfpu" path="res://utilidades/background.png" id="2_pa3ed"]
[ext_resource type="Texture2D" uid="uid://c7xwwu28wguy2" path="res://menu/Captura de tela 2024-08-08 100812.png" id="3_uoiyr"]
[ext_resource type="Texture2D" uid="uid://4qvvea845opd" path="res://textures/armas/medula.png" id="5_3wbsx"]
[ext_resource type="Texture2D" uid="uid://c7s8b22nfo1m" path="res://menu/pixil-frame-0 (28).png" id="6_3xx1x"]
[ext_resource type="Texture2D" uid="uid://be0n106lyupy2" path="res://menu/pixil-frame-0 (30).png" id="7_m0cme"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u0oas")

[node name="Background" type="Sprite2D" parent="."]
texture_filter = 2
texture_repeat = 2
scale = Vector2(40000, 40000)
texture = ExtResource("2_pa3ed")
region_enabled = true
region_rect = Rect2(-5000, -5000, 5000, 5000)

[node name="Inicial" type="Panel" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 85.0
offset_top = 24.0
offset_right = 551.0
offset_bottom = 327.0

[node name="Label2" type="Label" parent="Inicial"]
layout_mode = 0
offset_left = 29.0
offset_top = 157.0
offset_right = 439.0
offset_bottom = 258.0
theme_override_fonts/font = ExtResource("1_i2kbd")
theme_override_font_sizes/font_size = 18
text = "A lança é composta por medula óssea, onde os glóbulos brancos são produzidos no organismo. Este ataque transforma a medula óssea em uma poderosa lança, que é arremessada contra os inimigos"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Sprite2D" type="Sprite2D" parent="Inicial"]
position = Vector2(97, 72)
scale = Vector2(0.235247, 0.325083)
texture = ExtResource("2_dcu83")

[node name="Sprite2D2" type="Sprite2D" parent="Inicial"]
position = Vector2(375, 72)
scale = Vector2(0.244867, 0.325083)
texture = ExtResource("3_uoiyr")

[node name="Sprite2D3" type="Sprite2D" parent="Inicial"]
position = Vector2(234, 72)
scale = Vector2(2.9375, 2.65625)
texture = ExtResource("5_3wbsx")

[node name="passandopra neddle" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 582.0
offset_top = 136.0
offset_right = 641.0
offset_bottom = 201.0
texture_normal = ExtResource("6_3xx1x")
texture_hover = ExtResource("7_m0cme")
texture_focused = ExtResource("6_3xx1x")
stretch_mode = 0

[connection signal="pressed" from="passandopra neddle" to="." method="_on_passandopra_neddle_pressed"]
