[gd_scene load_steps=6 format=3 uid="uid://dfa0faa2yewl"]

[ext_resource type="Script" path="res://menu/Explicacao.gd" id="1_cn238"]
[ext_resource type="Texture2D" uid="uid://b7nwe1yw1dfpu" path="res://utilidades/background.png" id="2_uu77x"]
[ext_resource type="FontFile" uid="uid://bs8qhqjs8jqq" path="res://menu/upheavtt.ttf" id="2_wnccu"]
[ext_resource type="Texture2D" uid="uid://c7s8b22nfo1m" path="res://menu/pixil-frame-0 (28).png" id="3_diacw"]
[ext_resource type="Texture2D" uid="uid://be0n106lyupy2" path="res://menu/pixil-frame-0 (30).png" id="4_r6qsg"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cn238")

[node name="Background" type="Sprite2D" parent="."]
texture_filter = 2
texture_repeat = 2
scale = Vector2(40000, 40000)
texture = ExtResource("2_uu77x")
region_enabled = true
region_rect = Rect2(-5000, -5000, 5000, 5000)

[node name="Inicial" type="Panel" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 85.0
offset_top = 24.0
offset_right = 551.0
offset_bottom = 327.0

[node name="Label" type="Label" parent="Inicial"]
layout_mode = 0
offset_left = 21.0
offset_top = 4.0
offset_right = 431.0
offset_bottom = 181.0
theme_override_fonts/font = ExtResource("2_wnccu")
theme_override_font_sizes/font_size = 18
text = "Groburô é um jogo desenvolvido como parte deste Trabalho de Conclusão de Curso (TCC). Seu objetivo é educar o jogador sobre o papel dos glóbulos brancos no sistema imunológico, demonstrando como essas células atuam na proteção do corpo contra doenças dentro das veias e do sistema circulatório"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Label2" type="Label" parent="Inicial"]
layout_mode = 0
offset_left = 29.0
offset_top = 186.0
offset_right = 439.0
offset_bottom = 287.0
theme_override_fonts/font = ExtResource("2_wnccu")
theme_override_font_sizes/font_size = 18
text = "Posteriormente, será detalhado como cada elemento presente no jogo se alinha e contribui para a contextualização da temática central"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Button" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 582.0
offset_top = 136.0
offset_right = 641.0
offset_bottom = 201.0
texture_normal = ExtResource("3_diacw")
texture_hover = ExtResource("4_r6qsg")
texture_focused = ExtResource("3_diacw")
stretch_mode = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
