[gd_scene load_steps=8 format=3 uid="uid://buwjb37csmc5x"]

[ext_resource type="FontFile" uid="uid://bs8qhqjs8jqq" path="res://menu/upheavtt.ttf" id="1_lisu5"]
[ext_resource type="Script" path="res://menu/Explicacao.gd" id="1_wk5mu"]
[ext_resource type="Texture2D" uid="uid://dfvnqfgbty54x" path="res://menu/Captura de tela 2024-08-08 103912.png" id="2_gchl1"]
[ext_resource type="Texture2D" uid="uid://b7nwe1yw1dfpu" path="res://utilidades/background.png" id="2_jdlfo"]
[ext_resource type="Texture2D" uid="uid://cucup5u260fbj" path="res://textures/armas/macrofago.png" id="4_ebrk3"]
[ext_resource type="Texture2D" uid="uid://c7s8b22nfo1m" path="res://menu/pixil-frame-0 (28).png" id="5_1j4ye"]
[ext_resource type="Texture2D" uid="uid://be0n106lyupy2" path="res://menu/pixil-frame-0 (30).png" id="6_f507b"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wk5mu")

[node name="Background" type="Sprite2D" parent="."]
texture_filter = 2
texture_repeat = 2
scale = Vector2(40000, 40000)
texture = ExtResource("2_jdlfo")
region_enabled = true
region_rect = Rect2(-5000, -5000, 5000, 5000)

[node name="Inicial" type="Panel" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 85.0
offset_top = 24.0
offset_right = 551.0
offset_bottom = 327.0

[node name="Label2" type="Label" parent="Inicial"]
layout_mode = 0
offset_left = 29.0
offset_top = 136.0
offset_right = 439.0
offset_bottom = 293.0
theme_override_fonts/font = ExtResource("1_lisu5")
theme_override_font_sizes/font_size = 18
text = "Utilizando o recurso mais significativo à sua disposição, o glóbulo branco convoca a principal célula de defesa do organismo, o macrófago. Esta célula, de formato irregular, é então ativada para percorrer aleatoriamente o campo de batalha, atacando e eliminando todos os inimigos que encontra"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Sprite2D2" type="Sprite2D" parent="Inicial"]
position = Vector2(287, 72)
scale = Vector2(0.331162, 0.325083)
texture = ExtResource("2_gchl1")

[node name="Sprite2D3" type="Sprite2D" parent="Inicial"]
position = Vector2(85, 72)
scale = Vector2(2.9375, 2.65625)
texture = ExtResource("4_ebrk3")

[node name="passandopraexplicaçãodeterreno" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 582.0
offset_top = 136.0
offset_right = 641.0
offset_bottom = 201.0
texture_normal = ExtResource("5_1j4ye")
texture_hover = ExtResource("6_f507b")
texture_focused = ExtResource("5_1j4ye")
stretch_mode = 0

[connection signal="pressed" from="passandopraexplicaçãodeterreno" to="." method="_on_passandopraexplicaçãodeterreno_pressed"]
