[gd_scene load_steps=8 format=3 uid="uid://d3weyyvsdos3o"]

[ext_resource type="FontFile" uid="uid://bs8qhqjs8jqq" path="res://menu/upheavtt.ttf" id="1_7pn8l"]
[ext_resource type="Script" path="res://menu/Explicacao.gd" id="1_tn23h"]
[ext_resource type="Texture2D" uid="uid://kv8wpqef4jyx" path="res://menu/Captura de tela 2024-08-08 102232.png" id="2_8tpgn"]
[ext_resource type="Texture2D" uid="uid://b7nwe1yw1dfpu" path="res://utilidades/background.png" id="2_e2b6a"]
[ext_resource type="Texture2D" uid="uid://c0p062viighc" path="res://textures/armas/neddle.png" id="3_5qjou"]
[ext_resource type="Texture2D" uid="uid://c7s8b22nfo1m" path="res://menu/pixil-frame-0 (28).png" id="5_6ypyp"]
[ext_resource type="Texture2D" uid="uid://be0n106lyupy2" path="res://menu/pixil-frame-0 (30).png" id="6_48xd3"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tn23h")

[node name="Background" type="Sprite2D" parent="."]
texture_filter = 2
texture_repeat = 2
scale = Vector2(40000, 40000)
texture = ExtResource("2_e2b6a")
region_enabled = true
region_rect = Rect2(-5000, -5000, 5000, 5000)

[node name="Inicial" type="Panel" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 85.0
offset_top = 24.0
offset_right = 551.0
offset_bottom = 327.0

[node name="Label2" type="Label" parent="Inicial"]
layout_mode = 0
offset_left = 29.0
offset_top = 157.0
offset_right = 439.0
offset_bottom = 258.0
theme_override_fonts/font = ExtResource("1_7pn8l")
theme_override_font_sizes/font_size = 18
text = "A agulha simboliza os cientistas que representam as células no jogo. Este ataque é projetado para atravessar uma linha reta de forma perfurante, refletindo a precisão e impacto que essas células têm na defesa imunológica"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Sprite2D2" type="Sprite2D" parent="Inicial"]
position = Vector2(328, 72)
scale = Vector2(0.209162, 0.319004)
texture = ExtResource("2_8tpgn")

[node name="Sprite2D3" type="Sprite2D" parent="Inicial"]
position = Vector2(90, 72)
scale = Vector2(2.9375, 2.65625)
texture = ExtResource("3_5qjou")

[node name="passandopraCoaglo" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 582.0
offset_top = 136.0
offset_right = 641.0
offset_bottom = 201.0
texture_normal = ExtResource("5_6ypyp")
texture_hover = ExtResource("6_48xd3")
texture_focused = ExtResource("5_6ypyp")
stretch_mode = 0

[connection signal="pressed" from="passandopraCoaglo" to="." method="_on_passandopra_coaglo_pressed"]
