[gd_scene load_steps=7 format=3 uid="uid://b48n2ar4fux3g"]

[ext_resource type="Script" path="res://menu/Explicacao.gd" id="1_vl4ic"]
[ext_resource type="FontFile" uid="uid://bs8qhqjs8jqq" path="res://menu/upheavtt.ttf" id="1_xoukr"]
[ext_resource type="Texture2D" uid="uid://b7nwe1yw1dfpu" path="res://utilidades/background.png" id="2_gyu8v"]
[ext_resource type="Texture2D" uid="uid://c7s8b22nfo1m" path="res://menu/pixil-frame-0 (28).png" id="4_4greg"]
[ext_resource type="Texture2D" uid="uid://buxyh5iee22bg" path="res://gripe/pegue_na_minha_pomba.png" id="4_a1yw3"]
[ext_resource type="Texture2D" uid="uid://be0n106lyupy2" path="res://menu/pixil-frame-0 (30).png" id="5_c3223"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vl4ic")

[node name="Background" type="Sprite2D" parent="."]
texture_filter = 2
texture_repeat = 2
scale = Vector2(40000, 40000)
texture = ExtResource("2_gyu8v")
region_enabled = true
region_rect = Rect2(-5000, -5000, 5000, 5000)

[node name="Inicial" type="Panel" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 85.0
offset_top = 24.0
offset_right = 551.0
offset_bottom = 327.0

[node name="Label2" type="Label" parent="Inicial"]
layout_mode = 0
offset_left = 29.0
offset_top = 124.0
offset_right = 439.0
offset_bottom = 301.0
theme_override_fonts/font = ExtResource("1_xoukr")
theme_override_font_sizes/font_size = 15
text = "O pombo foi selecionado para representar a pneumonia no jogo devido ao seu papel como hospedeiro de patógenos como Chlamydia psittaci e Cryptococcus neoformans, que podem causar infecções pulmonares. A inalação de poeira contaminada proveniente das fezes de pombos, frequentemente encontrada em áreas urbanas, pode levar ao desenvolvimento de pneumonia em humanos, tornando o pombo um símbolo apropriado para essa condição"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Sprite2D" type="Sprite2D" parent="Inicial"]
position = Vector2(229, 57)
scale = Vector2(3, 3)
texture = ExtResource("4_a1yw3")

[node name="Luoldeng" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 582.0
offset_top = 136.0
offset_right = 641.0
offset_bottom = 188.0
texture_normal = ExtResource("4_4greg")
texture_pressed = ExtResource("5_c3223")
texture_hover = ExtResource("5_c3223")
texture_focused = ExtResource("4_4greg")
stretch_mode = 0

[connection signal="pressed" from="Luoldeng" to="." method="_on_luoldeng_pressed"]
